--- a/css/main.css
+++ b/css/main.css
@@ -492,7 +492,7 @@ body {
 #pidesbebida, #tellevamos, #mejoropcion, #disfrutas, #benofice-img {
   position: relative; top: -500px; opacity: 0;
 }
-#rapido, #facil, #manos { position: relative; opacity: 0; }
+#rapido, #facil, #manos { position: relative; opacity: 0; left:0px; }
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
   .container {
@@ -702,7 +702,8 @@ body {
   }
   #benefice .bd-list-beneficies {
     margin: 0;
-    padding: 0;
+    padding: 0; overflow: hidden; 
+    position: relative;
   }
   #benefice .bd-list-beneficies li {
     margin-bottom: 40px;
